[package]
name = "dds"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "dds-server"
path = "src/server.rs"

[[bin]]
name = "main"
path = "src/main.rs"

#[[bin]] # Bin to run the HelloWorld gRPC client
#name = "dds-client"
#path = "src/client.rs"

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
serde = "1.0"
jsonwebtoken = "7.2.0"
openssl = "0.10.38"
tonic = { version = "0.6", features = ["tls"] }
prost = "0.9"
rand = { version = "0.8.4", features = ["std_rng"] }
secp256k1 = { version = "0.21.2", features = ["rand-std"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "rt", "fs"] }
once_cell = "1.8"

[build-dependencies]
tonic-build = "0.6"
