[package]
name = "dds"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
jsonwebtoken = "7.2.0"
once_cell = "1.8"
openssl = "0.10.38"
prost = "0.9"
rand = { version = "0.8.4", features = ["std_rng"] }
secp256k1 = { version = "0.21.2", features = ["rand-std"] }
serde = "1.0"
serde_json = "1.0.79"
structopt = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "rt", "fs"] }
tonic = { version = "0.6", features = ["tls"] }
tracing = "0.1"
tracing-subscriber = "0.2"

[build-dependencies]
tonic-build = "0.6"
